Add integration tests refactor to registry 2