@@ -17,6 +17,7 @@ package io.apicurio.registry.utils.tests;
 
 import io.quarkus.test.junit.QuarkusTestProfile;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -32,8 +33,11 @@ public class AuthTestProfile implements QuarkusTestProfile {
 
     @Override
     public List<TestResourceEntry> testResources() {
-        return List.of(
-                new TestResourceEntry(JWKSMockServer.class));
+        if (!Boolean.parseBoolean(System.getProperty("cluster.tests"))) {
+            return List.of(
+                    new TestResourceEntry(JWKSMockServer.class));
+        } else {
+            return Collections.emptyList();
+        }
     }
-
 }
